--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "yarn": "^1.22.17"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
