changing to yarn

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "yarn": "^1.22.17"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
