--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3",
+    "styled-components": "^5.3.6",
     "yarn": "^1.22.19"
   },
   "scripts": {
