--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "emailjs": "^4.0.0",
     "emailjs-com": "^3.2.0",
+    "package-lock.json": "^1.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.1",
