--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.3.6",
     "yarn": "^1.22.19"
   },
